cabal-version:      3.0
-- The name of the package.
name:               PL0

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           A compiler for the little language PL0

-- A longer description of the package.
-- description:

license:            BSD-3-Clause
license-file:       LICENSE
author:             Roland Senn
maintainer:         rsx@bluewin.ch
-- copyright:
category:           Language
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library libpl0
    import:           warnings
    exposed-modules:  Syntax
                      , Eval
                      , Print
                      , PartialEval
                      , Lexer
                      , Parser
                      , Hlex

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.20.0.0
                      , mtl
                      , regex-tdfa
    hs-source-dirs:   src
    default-language: GHC2024


-- executable pl0
--     import:           warnings
--
--     -- .hs or .lhs file containing the Main module.
--     main-is:          Main.hs
--
--     -- Modules included in this executable, other than Main.
--     -- other-modules:
--
--     -- LANGUAGE extensions used by modules in this package.
--     -- other-extensions:

--     build-depends:
--         base ^>=4.20.0.0,
--         Compiler-PL0
 --    hs-source-dirs:   app
--     default-language: GHC2024

test-suite pl0-test
    import:           warnings
    default-language: GHC2024

    -- Modules included in this executable, other than Main.
    other-modules:
        PL0Spec
        , SpecLexer
        , SpecEval
        , SpecPrint
        , SpecPartialEval

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0
    -- Directories containing source files.
    hs-source-dirs:   test
    -- The entrypoint to the test suite.
    main-is:          Spec.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.20.0.0
        , hspec
        , libpl0
        , silently
        -- Compiler-PL0
